@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 
 <!DOCTYPE rss PUBLIC "-//Netscape Communications//DTD RSS 0.91//EN"
-            "http://my.netscape.com/publish/formats/rss-0.91.dtd">
+            "http://www.rssboard.org/rss-0.91.dtd">
 
 <rss version="0.91">
 
