@@ -1,9 +1,12 @@
 Revision history for Perl module XML::RSS
-
+        
        - ->parse() now explicitly returns $self.
             - http://rt.cpan.org/Public/Bug/Display.html?id=34914
        - ->parsefile() now explicitly returns $self.
             - http://rt.cpan.org/Public/Bug/Display.html?id=34914
+       - Applied a patch to change the RSS-0.91 DTD URL from my.netscape.com
+       to rssboard.org:
+            - http://rt.cpan.org/Ticket/Display.html?id=39780
         
 1.35 - September 13, 2008
        - Added a Module::Build-based Build.PL so we'll have an easier time 
